add mybatis and connect to h2 database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+server.port=8080
 github.client.id=9233929d9f721dcaf4a8
 github.client.secret=12b7926039b80c337724ff55828184b07e61d514
 github.redirect.uri=http://localhost:8080/callback
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.h2.Driver
